--- a/templates/base.html
+++ b/templates/base.html
@@ -1,8 +1,14 @@
+{% load django_bootstrap5 %}
+
 <html>
     <head>
         <title>Simulator Timeshare</title>
+        {% bootstrap_css %}
     </head>
     <body>
-        {% block content %}{% endblock %}
+        <div class="container">
+            {% block content %}{% endblock %}
+        </div>
+        {% bootstrap_javascript %}
     </body>
 </html>
