--- a/timeshare/users/templates/registration/login.html
+++ b/timeshare/users/templates/registration/login.html
@@ -1,11 +1,14 @@
 {% extends "base.html" %}
 
+{% load django_bootstrap5 %}
+
 {% block content %}
-    <form method="POST">{% csrf_token %}
+<form method="post" class="form">
+  {% csrf_token %}
 
-<!-- form variable -->
- {{ form.as_p }}
+  {% bootstrap_form form %}
 
-  <button type="submit">Login</button>
+  {% bootstrap_button button_type="submit" content="Login" %}
+
 </form>
 {% endblock %}
